Fix layout issue with horizontal scroll on home page and space around agency pages

--- a/css/src/_agency-default.scss
+++ b/css/src/_agency-default.scss
@@ -14,6 +14,14 @@
 
 	.site-inner {
 		padding: 0;
+
+		> .grid-container {
+			padding: {
+				top: 0;
+				left: 0;
+				right: 0;
+			}
+		}
 	}
 
 	h2,
